--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
         <title>Index</title>
     </head>
     <body>
+        <nav>
+            <a href="aboutme.html">About me</a>
+        </nav>
     </body>
 </html>
