--- a/aboutme.html
+++ b/aboutme.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>About me</title>
-        <link rel="stylesheet" type="text/css" href="CSS/style.css">
+        <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
     <body>
         <h2>About me</h2>
         <h3>More information!</h3>
         <nav>
-            <a href="Nina Tran.html">Main page</a>
+            <a href="index.html">Main page</a>
         </nav>
         <p>Some of my hobbies include:</p>
         <ul>
